--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,10 +14,10 @@ jobs:
       - checkout
       - run: npm install
       - run: npm run coverage
-      - sonarcloud/scan
+      # - sonarcloud/scan
 #
-orbs:
-  sonarcloud: sonarsource/sonarcloud@1.0.3
+"orbs:
+  "sonarcloud: sonarsource/sonarcloud@1.0.3
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
@@ -25,4 +25,4 @@ workflows:
   build-workflow:
       jobs:
         - build:
-            context: SonarCloud
+            # context: SonarCloud
