--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,8 +16,8 @@ jobs:
       - run: npm run coverage
       # - sonarcloud/scan
 #
-"orbs:
-  "sonarcloud: sonarsource/sonarcloud@1.0.3
+# orbs:
+  # sonarcloud: sonarsource/sonarcloud@1.0.3
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
