--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -3,7 +3,8 @@ name: Node.js CI
 on:
   push:
     branches: [ feat/gh-actns ]
-  pull_request: [ feat/gh-actns ]
+  pull_request: 
+    branches: [ feat/gh-actns ]
 
 jobs:
   build:
