testing npm dependeincies

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -2,9 +2,9 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ feat/gh-actns ]
   pull_request:
-    branches: [ main ]
+    branches: [ feat/gh-actns ]
 
 jobs:
   build:
