--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -17,6 +17,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+        - name: test-action
+          uses: ./.github/workflows/test-step
+          with:
+            test_input: "hello world from multiple files"
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
