--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -17,7 +17,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: test-action
+      - name: test-step
         uses: ./.github/actions/test-step
         with:
           test_input: "hello world from multiple files"
