--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -40,6 +40,8 @@ jobs:
       matrix:
         node-version: [14.x]
     steps:
+
+      - uses: actions/checkout@v3
       - name: Deploy to AWS
         run: echo "Installing serverless framework"
       - name: Install Serverless Framework
