--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -12,6 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Read step file
+      - uses: actions/checkout@v3
         uses: ./.github/actions/test-step.yml
         with:
           test_input: "test-string-value"
