--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v3
       - name: Read splitted file
-        uses: ./.github/actions/test-step
+        uses: ./.github/actions
         with:
           test_input: "test-string-value"
 
