--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,55 +1,29 @@
-name: Node.js CI
+name: Main Workflow
 
 on:
   push:
-    branches: [ feat/gh-actns ]
-  pull_request:
-    branches: [ feat/gh-actns ]
+    branches:
+      - main
 
 jobs:
-  test:
-
+  pre-test:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [14.x]
-
     steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-      - run: npm ci
-      - run: npm test
+      - name: Checkout Repo
+        uses: actions/checkout@v3
+      - <<: *test-step
 
-      
   build:
-    needs: [test]
+    needs: [pre-test]
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [14.x]
     steps:
       - name: Build artifact
-        run: echo "Run  build............"
+        run: echo "Run build............"
 
   deploy:
     needs: [build]
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [14.x]
     steps:
-
-      - uses: actions/checkout@v3
       - name: Deploy to AWS
-        run: echo "Installing serverless framework"
-      - name: Install Serverless Framework
-        run: npm install -g serverless
+        run: echo "Deploying to AWS..."
 
-      - name: Deploy to AWS Lambda
-        run: serverless deploy
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
