--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -11,7 +11,9 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
-      - <<: *test-step
+      - uses: ../test/test-step.yml
+        with:
+          test_input: "holi"
 
   build:
     needs: [pre-test]
