--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
-      - uses: .github/test/test_step.yml
+      - uses: ./.github/test/test_step.yml
         with:
           test_input: "holi"
 
