--- a/.github/test/test-step.yml
+++ b/.github/test/test-step.yml
@@ -1,4 +1,6 @@
-- name: Read splitted file
-  uses: ./.github/test-step/test-step
-  with:
-    test_input: "test-string-value"
+name: testing splitted file
+  runs:
+  using: composite
+    - name: echo test
+      shell: nash
+      run: echo "holiiii"
