--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,23 +1,47 @@
-name: Main Workflow
-
+name: Node.js CI
 on:
   push:
-    branches:
-      - main
-
+    branches: [ feat/gh-actns ]
+  pull_request:
+    branches: [ feat/gh-actns ]
 jobs:
-
-  build:
-    needs: [pre-test]
+  test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [14.x]
+    steps:
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run: npm ci
+      - run: npm test
+      
+  build:
+    needs: [test]
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [14.x]
     steps:
       - name: Build artifact
-        run: echo "Run build............"
-
+        run: echo "Run  build............"
   deploy:
     needs: [build]
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [14.x]
     steps:
+      - uses: actions/checkout@v3
       - name: Deploy to AWS
-        run: echo "Deploying to AWS..."
-
+        run: echo "Installing serverless framework"
+      - name: Install Serverless Framework
+        run: npm install -g serverless
+      - name: Deploy to AWS Lambda
+        run: serverless deploy
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
