changig file name

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -9,6 +9,7 @@ jobs:
   pre-test:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - name: read file
         uses: ./.github/test-step
         with:
