--- a/serverless.yml
+++ b/serverless.yml
@@ -1,4 +1,4 @@
-service: aws-node # NOTE: update this with your service name
+service: clean-cloud-cicd-dojo # NOTE: update this with your service name
 frameworkVersion: '3'
 
 provider:
