adding workflow to main

--- a/.github/workflows/clean_cloud_demo.yml
+++ b/.github/workflows/clean_cloud_demo.yml
@@ -2,9 +2,9 @@ name: Clean cloud cicd
 
 on:
   push:
-    branches: [ feat/jfgr-deploy ]
+    branches: [ master ]
   pull_request:
-    branches: [ feat/jfgr-deploy ]
+    branches: [ master ]
 
 jobs:
   build:
