--- a/.github/workflows/clean_cloud_demo.yml
+++ b/.github/workflows/clean_cloud_demo.yml
@@ -9,9 +9,11 @@ on:
 jobs:
   build:
 
-  runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
 
-  steps:
+    strategy:
+      matrix:
+        node-version: [14.x]
     - uses: actions/checkout@v3
     - name: Hello world from clean cloud
       run: echo "hello wordl"
