--- a/.github/workflows/clean_cloud_demo.yml
+++ b/.github/workflows/clean_cloud_demo.yml
@@ -8,12 +8,11 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         node-version: [14.x]
-    - uses: actions/checkout@v3
-    - name: Hello world from clean cloud
-      run: echo "hello wordl"
+    steps:
+      - uses: actions/checkout@v3
+      - name: Hello world from clean cloud
+        run: echo "hello world"
