--- a/.github/workflows/clean_cloud_demo.yml
+++ b/.github/workflows/clean_cloud_demo.yml
@@ -7,12 +7,16 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         node-version: [14.x]
     steps:
       - uses: actions/checkout@v3
-      - name: Hello world from clean cloud
-        run: echo "hello world"
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+         with:
+          node-version: ${{ matrix.node-version }}
+      - run: npm ci
+      - run: npm test
