--- a/.github/workflows/clean_cloud_demo.yml
+++ b/.github/workflows/clean_cloud_demo.yml
@@ -16,3 +16,4 @@ jobs:
       - uses: actions/checkout@v3
       - name: Hello world from clean cloud
         run: echo "hello world"
+        run: ls -la
